# django-auth-reports

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
auth_reports/: admin.py  apps.py
auth_reports/static/admin/js/: SelectFilter2.js
auth_reports/static/auth_reports/css/: select-filter-custom.css
