[tool.poetry]
name = "django-auth-reports"
version = "2.0.4"
description = "Adds csv reports for auth groups, right-side filtering for filter_horizontal m2m widgets"
homepage = "https://github.com/ImaginaryLandscape/django-auth-reports"
readme = "README.md"
authors = ["Imagescape <info@imagescape.com>"]
license = "BSD"
packages = [
    { include = "auth_reports" },
]

classifiers=[
"Programming Language :: Python :: 3.4",
"Programming Language :: Python :: 3.5",
"Programming Language :: Python :: 3.6",
"Programming Language :: Python :: 3.7",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Framework :: Django",
"Framework :: Django :: 2.2",
"Framework :: Django :: 3.0",
"Framework :: Django :: 3.1",
"Framework :: Django :: 3.2",
"Framework :: Django :: 4.0",
]
include = [
"LICENSE",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
